<resources>
    <string name="app_name">rss_aggregator-2022</string>
    <string name="feed_name">Rss Feed</string>
    <string name="manager_name">Rss Management</string>
    <string name="profile_name">Profile</string>
    <string name="add_option">Añadir</string>
    <string name="add_title">Añadir RSS</string>
    <string name="placeholder_name">Introduce el nombre del RSS</string>
    <string name="placeholder_url">Introduce la URL del RSS</string>
    <string name="button_cancel_value">Cancelar</string>
    <string name="button_add_value">Guardar</string>
    <string name="added_record">Registro añadido correctamente</string>
    <string name="error_added_record">Registro no se ha podido añadir correctamente</string>
    <string name="name_label">Name:</string>
    <string name="url_label">Url:</string>
    <string name="unk_error">Se ha producido un error inesperado</string>
    <string name="success_delete">Se ha eliminado el registro correctamente</string>
</resources>