<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph">

    <fragment
        android:id="@+id/feed"
        android:name="com.example.rss_aggregator_2022.features.rssfeed.RssFeedFragment"
        android:label="@string/feed_name"
        tools:layout="@layout/fragment_rss_feed">

    </fragment>
    <fragment
        android:id="@+id/management"
        android:label="@string/manager_name"
        android:name="com.example.rss_aggregator_2022.features.rssmanagement.RssManagementFragment"
        tools:layout="@layout/fragment_rss_management">

    </fragment>
    <fragment
        android:id="@+id/profile"
        android:name="com.example.rss_aggregator_2022.features.profile.ProfileFragment"
        android:label="@string/profile_name"
        tools:layout="@layout/fragment_profile">

    </fragment>

</navigation>