<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_form_view"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/bottom_sheet_height"
    style="?attr/bottomSheetStyle"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/bottom_sheet_font_title_size"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_bar"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:background="?colorSecondary"/>

        <EditText
            android:id="@+id/input_name"
            android:layout_width="@dimen/input_label_width"
            android:layout_height="@dimen/input_label_height"
            android:hint="@string/placeholder_name"
            android:textColorHint="?colorTertiary"
            android:textSize="@dimen/bottom_sheet_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/input_url"
            android:layout_width="@dimen/input_label_width"
            android:layout_height="@dimen/input_label_height"
            android:hint="@string/placeholder_url"
            android:textColorHint="?colorTertiary"
            android:textSize="@dimen/bottom_sheet_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name"/>

        <Button
            android:id="@+id/bottomsheet_button_save"
            android:layout_width="@dimen/bottom_sheet_button_size"
            android:layout_height="wrap_content"
            android:text="@string/button_add_value"
            app:layout_constraintTop_toBottomOf="@id/input_url"
            app:layout_constraintEnd_toStartOf="@id/bottomsheet_button_cancel"
            android:layout_margin="@dimen/horizontal_spacing"/>
        <Button
            android:id="@+id/bottomsheet_button_cancel"
            android:layout_width="@dimen/bottom_sheet_button_size"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/input_url"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/button_cancel_value"
            android:layout_margin="@dimen/horizontal_spacing"/>

    </androidx.constraintlayout.widget.ConstraintLayout>