<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        style="?attr/bottomSheetStyle"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <!-- Bottom sheet contents. -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="@id/title"
            android:background="?colorSecondary"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/bottom_sheet_font_title_size"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:background="?colorSecondary"/>

        <EditText
            android:id="@+id/bottom_sheet_name"
            android:layout_width="@dimen/input_label_width"
            android:layout_height="@dimen/input_label_height"
            android:hint="@string/placeholder_name"
            android:textColorHint="#8D6E63"
            android:textSize="@dimen/bottom_sheet_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/bottom_sheet_url"
            android:layout_width="@dimen/input_label_width"
            android:layout_height="@dimen/input_label_height"
            android:hint="@string/placeholder_url"
            android:inputType="textAutoComplete"
            android:textColorHint="#8D6E63"
            android:textSize="@dimen/bottom_sheet_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_name"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/bottomsheet_button_save"
            android:layout_width="@dimen/bottom_sheet_button_size"
            android:layout_height="wrap_content"
            android:text="@string/button_add_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bottomsheet_button_cancel"
            android:layout_margin="@dimen/horizontal_spacing"/>
        <Button
            android:id="@+id/bottomsheet_button_cancel"
            android:layout_width="@dimen/bottom_sheet_button_size"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/button_cancel_value"
            android:layout_margin="@dimen/horizontal_spacing"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>