<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_form_view"
    style="?attr/bottomSheetStyle"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/margin"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/user_form_bottom_padding"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_title"
        android:textSize="@dimen/user_form_font_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_form_bar"
        android:background="?colorSecondary"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginStart="@dimen/horizontal_spacing"
        android:layout_marginEnd="@dimen/horizontal_spacing"
        android:layout_marginTop="@dimen/vertical_spacing">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_label_height"
            android:hint="@string/placeholder_name"
            android:textColorHint="?colorTertiary"
            android:textSize="@dimen/user_form_font_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_url_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name_layout"
        android:layout_marginStart="@dimen/horizontal_spacing"
        android:layout_marginEnd="@dimen/horizontal_spacing"
        android:layout_marginTop="@dimen/vertical_spacing">

        <EditText
            android:id="@+id/input_url"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_label_height"
            android:hint="@string/placeholder_url"
            android:textColorHint="?colorTertiary"
            android:textSize="@dimen/user_form_font_size"

             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottomsheet_button_save"
        android:layout_width="@dimen/user_form_button_size"
        style="@style/Widget.Material3.Button.Icon"
        app:icon="@drawable/ic_plus"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_spacing"
        android:layout_marginEnd="@dimen/horizontal_spacing"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:layout_marginBottom="@dimen/vertical_spacing"
        android:text="@string/button_add_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_url_layout"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottomsheet_button_cancel"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="@dimen/user_form_button_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_spacing"
        android:layout_marginEnd="@dimen/horizontal_spacing"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:text="@string/button_cancel_value"
        app:layout_constraintEnd_toStartOf="@id/bottomsheet_button_save"
        app:layout_constraintTop_toBottomOf="@id/input_url_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>